fix padding of instructions on mobile devices

--- a/src/components/Wall/styles.scss
+++ b/src/components/Wall/styles.scss
@@ -86,6 +86,6 @@ text {
 
 @media (max-width: 577px) {
     .instructions {
-        padding: 2rem 1rem;
+        padding: 1rem;
     }
 }
